--- a/css/bildschirm.css
+++ b/css/bildschirm.css
@@ -3,32 +3,34 @@
 .Hintergrund{background-image: url(../Software/Bilder/Hintergrund_Slider.jpg);
 background-repeat: no-repeat;}
 #footerIcon{
-    color: #f4511e;
+    color: #ffffff;
 }
 body {
       font: 400 15px Lato, Times;
       line-height: 1.8;
-      color: #000000;
+      color:  black;
   }
   h2 {
       font-size: 24px;
       text-transform: uppercase;
-      color: #303030;
+      color: #ffffff;
       font-weight: 600;
       margin-bottom: 30px;
   }
   h4 {
       font-size: 19px;
       line-height: 1.375em;
-      color: #303030;
+      color: rgb(255, 255, 255);
       font-weight: 400;
       margin-bottom: 30px;
   }  
   .jumbotron {
-      background: #92989d linear-gradient(to bottom,rgb(116, 45, 75), rgb(255, 182, 231));
+      background: white;
       padding: 100px 0px;
-      color: #fff;
-      font-family: Montserrat, 'Times New Roman', Times, serif ;
+      color: #ac0151;
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;
+      font-style:unset;
+     
   }
   .container-fluid {
       padding: 60px 50px;
@@ -38,20 +40,20 @@ body {
 
   }
   .bg-grey {
-      background-color: #f6f6f6;
+      background: #ac0151 linear-gradient(to bottom,white, #ac0151 ) ;
   }
   .button{
-    background-color: #f4511e;
+    background-color: #ac0151;
     font-size: large;
     color: #fff;
 
   }
   .logo-small {
-      color: #f4511e;
+      color: #ac0151;
       font-size: 50px;
   }
   .logo {
-      color: #f4511e;
+      color: #ac0151;
       font-size: 200px;
   }
   .thumbnail {
@@ -66,13 +68,13 @@ body {
   }
   .carousel-control.right, .carousel-control.left {
       background-image: none;
-      color: #f4511e;
+      color: #ffffff;
   }
   .carousel-indicators li {
-      border-color: #f4511e;
+      border-color: #ac0151;
   }
   .carousel-indicators li.active {
-      background-color: #f4511e;
+      background-color: #ac0151;
   }
   .item h4 {
       font-size: 19px;
@@ -85,7 +87,7 @@ body {
       font-style: normal;
   }
   .panel {
-      border: 1px solid #f4511e; 
+      border: 1px solid #ac0151; 
       border-radius:0 !important;
       transition: box-shadow 0.5s;
   }
@@ -93,13 +95,13 @@ body {
       box-shadow: 5px 0px 40px rgba(0,0,0, .2);
   }
   .panel-footer .btn:hover {
-      border: 1px solid #f4511e;
-      background-color: #fff !important;
-      color: #f4511e;
+      border: 1px solid #ac0151;
+      background-color: #000000 !important;
+      color: #ac0151;
   }
   .panel-heading {
       color: #fff !important;
-      background-color: #f4511e !important;
+      background-color: #ac0151 !important;
       padding: 25px;
       border-bottom: 1px solid transparent;
       border-top-left-radius: 0px;
@@ -114,24 +116,24 @@ body {
       font-size: 32px;
   }
   .panel-footer h4 {
-      color: #aaa;
+      color: #ac0151;
       font-size: 14px;
   }
   .panel-footer .btn {
       margin: 15px 0;
-      background-color: #f4511e;
+      background-color: #ac0151;
       color: #fff;
   }
-.farbe{background-color: #f4511e;
-border-color: #f4511e;}
+.farbe{background-color: #ac0151;
+border-color: #ac0151;}
   .navbar {
       margin-bottom: 0;
-      background-color: #555555;
+      background-color: #ac0151;
       z-index: 9999;
       border: 0;
       font-size: 12px !important;
       line-height: 1.42857143 !important;
-      letter-spacing: 4px;xs
+      letter-spacing: 4px;
       border-radius: 0;
       font-family: Montserrat, sans-serif;
   }
@@ -139,7 +141,7 @@ border-color: #f4511e;}
       color: #fff !important;
   }
   .navbar-nav li a:hover, .navbar-nav li.active a {
-      color: #f4511e !important;
+      color: #ac0151 !important;
       background-color: #fff !important;
   }
   .navbar-default .navbar-toggle {
@@ -149,7 +151,7 @@ border-color: #f4511e;}
   footer .glyphicon {
       font-size: 20px;
       margin-bottom: 20px;
-      color: #f4511e;
+      color: #ac0151;
   }
   .slideanim {visibility:hidden;}
   .slide {
@@ -194,7 +196,7 @@ border-color: #f4511e;}
         font-size: 150px;
     }
   }
-.Ueberschrift{background-color: #f4511e;
+.Ueberschrift{background-color: #a19b78;
 color:white;
 width: 270px;}
 .container {
@@ -210,3 +212,48 @@ width: 270px;}
 .element img {
     max-width: 80%;
 }
+.rectangle { width: 800px;
+     height: 700px;
+     background: #ac0151 linear-gradient(to bottom,white, #ac0151 ) ;
+       text-align: center;
+        padding: 30px;
+         display: flex;
+          align-items: center;
+           justify-content: center;
+            flex-direction: column;
+            margin: 0 auto;
+            border: 10px solid #ac0151;
+         }
+          .rectangle img {
+        width: 400px;
+         height: 250px;
+          margin-bottom: 30px;
+         }
+         .rectangle p {
+             font-size: 30px;
+             font-family: 'Times New Roman', Times, serif;
+             color: white;
+             font-style: italic; 
+         }
+         body {
+             background-color:rgb(255, 255, 255);
+             font-family:Georgia, 'Times New Roman', Times, serif;
+           
+         }
+        p {
+            font-size: 25px;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            color:rgb(0, 0, 0);
+            font-style: italic;
+        }
+        h2 {
+            font-size: 27px;
+            font-family: cursive;
+            color: rgb(0, 0, 0);
+            font-style: oblique;
+        }
+        /* Dies ist ein Kommentar */
+        body {
+            font-size: 16px;
+        }
+       
